[package]
name = "simple_timer"
version = "0.1.0"
edition = "2021"
keywords = [ "cron", "scheduler", "timer", "crontab", "delay" ]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simple_timer"

[features]
default = []

full = ["status-report"]
status-report = []


[dependencies]
cron_clock = "0.8.0"
anyhow = "^1.0.31"
rs-snowflake = "0.6.0"
dashmap = "=5.5.3"
lru = "0.12.3"
once_cell = "1.9.0"
futures = "^0.3.13"
smol = "^1.2.5"
concat-idents = "1.1.3"
async-trait = "^0.1.48"
event-listener = "=5.3.0"
log = "0.4.14"
tracing = "0.1.29"
thiserror = "^1.0.24"


tokio = { version = "^1.3.0", features = ["full"] }
